--- a/kid.html
+++ b/kid.html
@@ -6,7 +6,7 @@
   <title>Ageflix - Home</title>
   <style>
     * { box-sizing: border-box; margin:0; padding:0; font-family: 'Helvetica Neue', Arial, sans-serif; }
-    body { background: #000; color:#fff; }
+    body { background: #000; color: #fff; }
 
     /* Navbar */
     nav.navbar {
@@ -18,11 +18,11 @@
       padding: 10px 20px;
       flex-wrap: wrap;
     }
-    .navbar .logo { font-size: 28px; font-weight: bold; flex: 1; color: #e50914; }
+    .navbar .logo { font-size: 28px; font-weight: bold; color: #e50914; }
     .navbar ul { display: flex; list-style: none; justify-content: center; flex:2; }
     .navbar ul li { margin: 0 15px; }
     .navbar ul li a { color:#fff; text-decoration: none; font-weight: bold; }
-    .navbar .icon { flex: 1; text-align: right; font-size:24px; }
+    .navbar .icon { flex: 1; text-align: right; }
 
     /* Marquee */
     .marquee-container {
@@ -30,7 +30,7 @@
       overflow: hidden;
       background: #111;
       color: #fff;
-      font-size: 22px;
+      font-size: 20px;
       padding: 10px 0;
       position: relative;
     }
@@ -45,35 +45,65 @@
     }
 
     /* Banner Slider */
-    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; background:#000; }
+    .banner-slider { position: relative; overflow: hidden; max-width: 100%; height: 400px; margin-bottom:20px; }
     .slide { position: absolute; width: 100%; height: 100%; opacity: 0; transition: opacity 1s ease-in-out; }
     .slide.active { opacity: 1; z-index: 2; }
     .slide img { width: 100%; height: 100%; object-fit: cover; }
 
-    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 30px; z-index: 3; }
+    .prev, .next { position: absolute; top: 50%; transform: translateY(-50%); background-color: rgba(0,0,0,0.5); color: #fff; border: none; padding: 10px; cursor: pointer; font-size: 24px; z-index: 3; }
     .prev { left: 10px; }
     .next { right: 10px; }
 
-    .dots { position: absolute; bottom: 15px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
-    .dot { width: 14px; height: 14px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
+    .dots { position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 3; }
+    .dot { width: 12px; height: 12px; border-radius: 50%; background-color: rgba(255,255,255,0.5); cursor: pointer; }
     .dot.active { background-color: #e50914; }
 
-    /* Hero / Webcam */
+    /* Hero / Age Detection */
     section.hero { text-align: center; padding: 20px; }
-    section.hero h1 { font-size: 36px; margin-bottom: 10px; color:#fff; }
+    section.hero h1 { font-size: 32px; margin-bottom: 10px; }
     section.hero p { font-size: 20px; margin-bottom: 20px; }
-    button#startBtn { padding: 12px 30px; font-size: 18px; cursor: pointer; background:#e50914; border:none; color:#fff; border-radius:5px; transition:0.3s; }
-    button#startBtn:hover { background:#b00610; }
-
+    button#startBtn { padding: 12px 30px; font-size: 18px; cursor: pointer; background-color: #e50914; color: #fff; border: none; border-radius: 5px; transition: 0.3s; }
+    button#startBtn:hover { background-color: #b00610; }
     #webcam-container, #label-container { margin: 15px auto; }
+
+    /* Static images section */
+    .static-images { display: flex; justify-content: center; flex-wrap: wrap; gap: 15px; margin-bottom:30px; }
+    .static-images img { width: 300px; height: 200px; object-fit: cover; border-radius: 10px; }
+
+    /* Popup & Loading */
+    #popup, #loading-screen {
+      position: fixed; top:0; left:0; width:100%; height:100%;
+      display: flex; justify-content:center; align-items:center;
+      z-index: 9999;
+      background: rgba(0,0,0,0.85);
+    }
+    .popup-content{
+      background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px;
+      text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6);
+      animation: fadeIn 0.5s ease;
+    }
+    .popup-content h2{ font-size:28px; margin-bottom:20px;}
+    .popup-content span{color:#e50914;font-weight:bold;}
+    #nextBtn{background-color:#e50914;color:white;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;transition:0.3s;}
+    #nextBtn:hover{background-color:#b00610;}
+
+    .loader{
+      border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%;
+      width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px;
+    }
+    .loading-text{font-size:20px;letter-spacing:1px;color:#fff;text-shadow:0 0 10px rgba(255,255,255,0.4);animation:pulse 1.5s ease-in-out infinite;}
+    @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
+    @keyframes pulse{0%,100%{opacity:0.7;}50%{opacity:1;}}
+    @keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
 
     /* Responsive */
     @media(max-width:768px){
       .navbar ul { flex: 1; justify-content: space-around; margin:10px 0; }
-      section.hero h1 { font-size: 28px; }
+      section.hero h1 { font-size: 24px; }
       section.hero p { font-size: 16px; }
       button#startBtn { font-size: 16px; }
       .marquee-container { font-size: 18px; }
+      .static-images img { width: 90%; height: auto; }
     }
   </style>
 </head>
@@ -90,9 +120,9 @@
     <div class="icon">🎬</div>
   </nav>
 
-  <!-- Marquee -->
+  <!-- Marquee / Moving Text -->
   <div class="marquee-container">
-    <div class="marquee" id="marqueeText"></div>
+    <div class="marquee" id="marqueeText">Loading...</div>
   </div>
 
   <!-- Banner Slider -->
@@ -108,18 +138,39 @@
   <section class="hero">
     <h1>Welcome to Ageflix</h1>
     <p>Discover movies according to your age group!</p>
-
     <div id="webcam-container"></div>
     <div id="label-container"></div>
-
     <button id="startBtn">Start Camera & Detect Age</button>
   </section>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 
   <script>
+    // Slider
+    const slides = document.querySelectorAll('.slide');
+    const prev = document.querySelector('.prev');
+    const nextBtn = document.querySelector('.next');
+    const dotsContainer = document.querySelector('.dots');
+    let slideIndex = 0;
+    function showSlide(index){
+      if(index<0) slideIndex=slides.length-1;
+      else if(index>=slides.length) slideIndex=0;
+      else slideIndex=index;
+      slides.forEach((s,i)=>{ s.classList.remove('active'); if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active'); });
+      slides[slideIndex].classList.add('active');
+      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
+    }
+    prev.addEventListener('click',()=>showSlide(slideIndex-1));
+    nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
+    slides.forEach((_,i)=>{
+      const dot=document.createElement('span');
+      dot.classList.add('dot');
+      if(i===0) dot.classList.add('active');
+      dot.addEventListener('click',()=>showSlide(i));
+      dotsContainer.appendChild(dot);
+    });
+
     // Marquee
     const marqueeTextElem = document.getElementById('marqueeText');
     const marqueeMessages = [
@@ -137,52 +188,58 @@
     setInterval(updateMarquee,5000);
     updateMarquee();
 
-    // Teachable Machine Age Detection
+    // Teachable Machine Age Detection with Popups
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
     let model, webcam, maxPredictions;
-    let detected = false;
 
-    async function init() {
+    document.getElementById("startBtn").addEventListener("click", async () => {
+      // Show initial popup with loader
+      const loadingPopup = document.createElement("div");
+      loadingPopup.id = "popup";
+      loadingPopup.innerHTML = `
+        <div class="popup-content">
+          <h2>Detecting your age...</h2>
+          <div class="loader"></div>
+          <p class="loading-text">Please wait</p>
+        </div>
+      `;
+      document.body.appendChild(loadingPopup);
+
+      // Load model & webcam
       const modelURL = URL + "model.json";
       const metadataURL = URL + "metadata.json";
       model = await tmImage.load(modelURL, metadataURL);
       maxPredictions = model.getTotalClasses();
-
-      const flip = true;
-      webcam = new tmImage.Webcam(400, 300, flip);
+      webcam = new tmImage.Webcam(400, 300, true);
       await webcam.setup();
       await webcam.play();
       document.getElementById("webcam-container").appendChild(webcam.canvas);
-      window.requestAnimationFrame(loop);
-    }
 
-    async function loop() {
-      webcam.update();
-      await predict();
-      if(!detected) window.requestAnimationFrame(loop);
-    }
+      let detectedGroup = null;
+      const startTime = Date.now();
 
-    async function predict() {
-      const prediction = await model.predict(webcam.canvas);
-      let labelContainer = document.getElementById("label-container");
-      labelContainer.innerHTML = "";
-      prediction.forEach(p => {
-        labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(2)}%</p>`;
-      });
+      async function loop() {
+        webcam.update();
+        const prediction = await model.predict(webcam.canvas);
+        const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
 
-      const best = prediction.reduce((a,b)=> a.probability>b.probability?a:b);
-      if(best.probability>0.85 && !detected){
-        detected = true;
-        showPopup(best.className);
+        if(best.probability > 0.85 || (Date.now() - startTime) >= 30000){
+          detectedGroup = best.className;
+          loadingPopup.remove();
+          showResultPopup(detectedGroup);
+        } else {
+          requestAnimationFrame(loop);
+        }
       }
-    }
+      loop();
+    });
 
-    function showPopup(userGroup){
+    function showResultPopup(userGroup){
       const popup = document.createElement("div");
       popup.id = "popup";
       popup.innerHTML = `
         <div class="popup-content">
-          <h2>You are <span>${userGroup}</span></h2>
+          <h2>Your detected age group: <span>${userGroup}</span></h2>
           <button id="nextBtn">Next ➜</button>
         </div>
       `;
@@ -199,7 +256,7 @@
       loadingScreen.id = "loading-screen";
       loadingScreen.innerHTML = `
         <div class="loader"></div>
-        <p class="loading-text">Loading your movies...</p>
+        <p class="loading-text">Preparing movies for you...</p>
       `;
       document.body.appendChild(loadingScreen);
 
@@ -211,81 +268,6 @@
         else location.reload();
       }, 3000);
     }
-
-    document.getElementById("startBtn").addEventListener("click", init);
-
-    // Popup & Loader Styles
-    const style = document.createElement("style");
-    style.innerHTML = `
-      @keyframes spin { 0%{transform:rotate(0deg);}100%{transform:rotate(360deg);} }
-
-      #popup{
-        position:fixed;top:0;left:0;width:100%;height:100%;
-        background: rgba(0,0,0,0.8); display:flex; justify-content:center; align-items:center; z-index:9999;
-      }
-      .popup-content{
-        background:#111; border:2px solid #e50914; padding:30px 50px; border-radius:10px;
-        text-align:center; color:white; box-shadow:0 0 20px rgba(229,9,20,0.6);
-        animation: fadeIn 0.5s ease;
-      }
-      .popup-content h2{ font-size:28px; margin-bottom:20px;}
-      .popup-content span{color:#e50914;font-weight:bold;}
-      #nextBtn{background-color:#e50914;color:white;border:none;padding:12px 40px;border-radius:5px;font-size:18px;cursor:pointer;transition:0.3s;}
-      #nextBtn:hover{background-color:#b00610;}
-
-      #loading-screen{
-        position:fixed;top:0;left:0;width:100%;height:100%;
-        background-color:#000; display:flex; flex-direction:column; justify-content:center; align-items:center;
-        color:white; z-index:99999;
-      }
-      .loader{
-        border:6px solid #f3f3f3; border-top:6px solid #e50914; border-radius:50%;
-        width:70px; height:70px; animation:spin 1s linear infinite; margin-bottom:25px;
-      }
-      .loading-text{font-size:20px;letter-spacing:1px;color:#fff;text-shadow:0 0 10px rgba(255,255,255,0.4);animation:pulse 1.5s ease-in-out infinite;}
-      @keyframes pulse{0%,100%{opacity:0.7;}50%{opacity:1;}}
-      @keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
-    `;
-    document.head.appendChild(style);
-
-    // Slider functionality
-    const slides = document.querySelectorAll('.slide');
-    const prev = document.querySelector('.prev');
-    const nextBtnSlider = document.querySelector('.next');
-    const dotsContainer = document.querySelector('.dots');
-    let slideIndex = 0;
-
-    function showSlide(index){
-      if(index<0) slideIndex=slides.length-1;
-      else if(index>=slides.length) slideIndex=0;
-      else slideIndex=index;
-      slides.forEach((s,i)=>{
-        s.classList.remove('active');
-        if(dotsContainer.children[i]) dotsContainer.children[i].classList.remove('active');
-      });
-      slides[slideIndex].classList.add('active');
-      if(dotsContainer.children[slideIndex]) dotsContainer.children[slideIndex].classList.add('active');
-    }
-
-    prev.addEventListener('click',()=>{ showSlide(slideIndex-1); resetAutoSlide(); });
-    nextBtnSlider.addEventListener('click',()=>{ showSlide(slideIndex+1); resetAutoSlide(); });
-
-    slides.forEach((_,i)=>{
-      const dot=document.createElement('span');
-      dot.classList.add('dot');
-      if(i===0) dot.classList.add('active');
-      dot.addEventListener('click',()=>{ showSlide(i); resetAutoSlide(); });
-      dotsContainer.appendChild(dot);
-    });
-
-    let autoSlide = setInterval(()=>{ showSlide(slideIndex+1); }, 5000);
-
-    function resetAutoSlide(){
-      clearInterval(autoSlide);
-      autoSlide = setInterval(()=>{ showSlide(slideIndex+1); }, 5000);
-    }
-
-    showSlide(slideIndex);
   </script>
 
 </body>
